2011-10-21  Kirit Saelensminde  <kirit@felspar.com>
 Added fostlib::bytes for calculating the size of a memory block in bytes.

2011-10-09  Kirit Saelensminde  <kirit@felspar.com>
 Updated the readme files for later versions of Ubuntu.

2011-08-16  Kirit Saelensminde  <kirit@felspar.com>
 Changed some test logging messages so they don't look like real errors any more.

2011-07-28  Kirit Saelensminde  <kirit@felspar.com>
 Added support for Boost 1.46.

2011-04-10  Kirit Saelensminde  <kirit@felspar.com>
 Added a time logging function that logs any individual test that takes more than ten seconds to run.
 Added a timer to the datetime library which allows us to time how long parts of a program execution take.

2011-04-09  Kirit Saelensminde  <kirit@felspar.com>
 The insert functions for JSON values now use a coerce rather than a JSON constructor so the API will work with more data types.

2011-03-11  Kirit Saelensminde  <kirit@felspar.com>
 Updated the build system so that there is a new fost-integration-test target that will create a test executable that can be run at any later stage as well as run the tests during the build process.

2011-03-04  Kirit Saelensminde  <kirit@felspar.com>
 The jcursor constructor can now take up to four arguments and build a cursor path from them.

2011-02-10  Kirit Saelensminde  <kirit@felspar.com>
 JSON to JSON coercions are now supported and logging now accepts any parameter type which is coercable to JSON.

2010-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Added a new basic logging library.

2010-11-09  Kirit Saelensminde  <kirit@felspar.com>
 The build system now supports installation based on the location set in the PREFIX envrionment variable. If the path is relative then it is relative to the location of the Jamroot file that is being built.

2010-11-05  Kirit Saelensminde  <kirit@felspar.com>