@@ -1,3 +1,6 @@
+2011-10-22  Kirit Saelensminde  <kirit@felspar.com>
+ Clear out the jobs that have been taken from the queue when a major problem occurs. This should help to stop threads waiting on futures from waiting forever.
+
 2011-10-21  Kirit Saelensminde  <kirit@felspar.com>
  Added fostlib::bytes for calculating the size of a memory block in bytes.
 
